<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <TextView
        android:id="@+id/reset_pwd_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/title_reset_pwd"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/reset_pwd_card"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:src="@drawable/shape_login_card_background"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_pwd_title" />

    <EditText
        android:id="@+id/reset_new_pwd"
        android:layout_width="228dp"
        android:layout_height="28dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape_userinfo_input_background"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_"
        android:fontFamily="sans-serif"
        android:maxLength="16"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="12sp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/reset_pwd_card"
        app:layout_constraintStart_toStartOf="@+id/reset_pwd_card"
        app:layout_constraintTop_toBottomOf="@+id/reset_new_pwd_label"
        tools:text="ExampleUsername"
        android:hint="@string/hint_pwd_restriction"/>


    <TextView
        android:id="@+id/reset_new_pwd_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/label_new_pwd"
        android:textColor="@color/colorTextLight"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/reset_new_pwd"
        app:layout_constraintTop_toTopOf="@+id/reset_pwd_card" />

    <TextView
        android:id="@+id/reset_confirm_pwd_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/label_confirm_pwd"
        android:textColor="@color/colorTextLight"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/reset_confirm_pwd"
        app:layout_constraintTop_toBottomOf="@+id/reset_new_pwd" />

    <EditText
        android:id="@+id/reset_confirm_pwd"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="228dp"
        android:layout_height="28dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape_userinfo_input_background"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/reset_pwd_card"
        app:layout_constraintStart_toStartOf="@+id/reset_pwd_card"
        app:layout_constraintTop_toBottomOf="@+id/reset_confirm_pwd_label"
        tools:text="ExampleConfirm"
        android:hint="@string/hint_confirm_password"/>


    <Button
        android:id="@+id/reset_pwd_button"
        android:layout_width="228dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_login"
        android:fontFamily="sans-serif"
        android:text="@string/btn_reset_pwd"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/reset_confirm_pwd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reset_confirm_pwd"
        app:layout_constraintTop_toBottomOf="@+id/reset_confirm_pwd" />



</androidx.constraintlayout.widget.ConstraintLayout>