<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="44sp"
        android:fontFamily="@font/bebas_regular"
        android:textColor="@color/colorPrimary"
        android:digits="0123456789."
        android:divider = "@drawable/divider_amount"
        tools:text="666.00"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    
    <LinearLayout
        android:id="@+id/type_boundaries"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:divider="@drawable/divider_light"
        android:showDividers="end">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/type_label_boundaries"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_statement_type"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textColor="@color/colorTextLight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Spinner
            android:id="@+id/type_spinner"
            app:layout_constraintStart_toEndOf="@+id/type_label_boundaries"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"/>

    </LinearLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        app:layout_constraintTop_toBottomOf="@+id/type_boundaries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/divider_light"/>


    <LinearLayout
        android:id="@+id/category_boundaries"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@+id/divider1"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/category_label_boundaries"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_statement_category"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textColor="@color/colorTextLight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/category_label_boundaries"
            android:layout_marginStart="8dp"
            tools:text="Transportation -> Public Transportation"
            android:hint="@string/hint_category"/>

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        app:layout_constraintTop_toBottomOf="@+id/category_boundaries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/divider_light"/>

    <LinearLayout
        android:id="@+id/date_boundaries"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/date_label_boundaries"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_statement_date"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textColor="@color/colorTextLight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/date_label_boundaries"
            android:layout_marginStart="8dp"
            tools:text="2020/02/12"
            android:hint="@string/hint_date"/>

    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        app:layout_constraintTop_toBottomOf="@+id/date_boundaries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/divider_light"/>

    <LinearLayout
        android:id="@+id/memo_boundaries"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:divider="@drawable/divider_light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/memo_label_boundaries"
            android:layout_width="64dp"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/memo_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_statement_memo"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textColor="@color/colorTextLight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/memo_label_boundaries"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="8dp"
            android:singleLine="true"
            tools:text="Transportation -> Public Transportation"
            android:hint="@string/hint_text"/>

    </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_add"
            android:text="@string/btn_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_statement_barrier"
            android:layout_marginBottom="8dp"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/add_statement_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="delete_button"/>

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/btn_delete"
            android:fontFamily="sans-serif-medium"
            android:text="@string/btn_delete"
            android:textColor="@color/colorTextDark"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>